test/conformance/chainsaw/generating-policies/clone/nosync/generate-secrets-and-networkpolicies/source.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: test-secret-1
  namespace: default
type: Opaque
--- 
apiVersion: v1
data:
  key: dmFsdWU=
kind: Secret
metadata:
  name: test-secret-2
  namespace: default
type: Opaque
---
apiVersion: v1
data:
  color: Ymx1ZQ==
kind: Secret
metadata:
  name: test-secret-3
  namespace: default
type: Opaque
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
