test/conformance/chainsaw/generating-policies/clone/nosync/generate-secrets-and-networkpolicies/policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: GeneratingPolicy
metadata:
  name: generate-secrets-and-networkpolicies
status:
  conditionStatus:
    conditions:
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
    message: ""
    ready: true
